네이밍 재정의

--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -40,13 +40,13 @@
         android:name="com.example.project_myfit.main.list.ListFragment"
         tools:layout="@layout/fragment_list">
         <argument
-            android:name="category_id"
+            android:name="categoryId"
             app:argType="long" />
         <argument
-            android:name="folder_id"
+            android:name="folderId"
             app:argType="long" />
         <argument
-            android:name="parent_category"
+            android:name="parentCategory"
             app:argType="string" />
         <action
             android:id="@+id/action_listFragment_to_inputOutputFragment"
@@ -99,13 +99,13 @@
         android:label=""
         tools:layout="@layout/fragment_size">
         <argument
-            android:name="parent_id"
+            android:name="parentId"
             app:argType="long" />
         <argument
-            android:name="size_id"
+            android:name="sizeId"
             app:argType="long" />
         <argument
-            android:name="parent_category"
+            android:name="parentCategory"
             app:argType="string" />
         <action
             android:id="@+id/action_inputOutputFragment_to_deleteConfirmDialog"
@@ -129,13 +129,13 @@
         android:name="com.example.project_myfit.dialog.AddDialog"
         android:label="AddDialog">
         <argument
-            android:name="item_type"
+            android:name="itemType"
             app:argType="string" />
         <argument
-            android:name="parent_category"
+            android:name="parentCategory"
             app:argType="string" />
         <argument
-            android:name="parent_id"
+            android:name="parentId"
             app:argType="long" />
         <action
             android:id="@+id/action_addDialog_to_sameNameAddDialog"
@@ -146,13 +146,13 @@
         android:name="com.example.project_myfit.dialog.NameEditDialog"
         android:label="NameEditDialog">
         <argument
-            android:name="item_id"
+            android:name="itemId"
             app:argType="long" />
         <argument
-            android:name="item_type"
+            android:name="itemType"
             app:argType="string" />
         <argument
-            android:name="is_parent_name"
+            android:name="isParentName"
             app:argType="boolean" />
         <action
             android:id="@+id/action_nameEditDialog_to_sameNameEditDialog"
@@ -163,7 +163,7 @@
         android:name="com.example.project_myfit.dialog.SelectedItemDeleteDialog"
         android:label="SelectedItemDeleteDialog">
         <argument
-            android:name="selected_item_size"
+            android:name="selectedItemSize"
             app:argType="integer" />
     </dialog>
     <dialog
@@ -174,7 +174,7 @@
             android:name="sort"
             app:argType="integer" />
         <argument
-            android:name="fragment_type"
+            android:name="fragmentType"
             app:argType="string" />
     </dialog>
     <dialog
@@ -182,13 +182,13 @@
         android:name="com.example.project_myfit.dialog.SameNameAddDialog"
         android:label="SameNameAddDialog">
         <argument
-            android:name="item_type"
+            android:name="itemType"
             app:argType="string" />
         <argument
-            android:name="parent_category"
+            android:name="parentCategory"
             app:argType="string" />
         <argument
-            android:name="parent_id"
+            android:name="parentId"
             app:argType="long" />
         <argument
             android:name="new_name"
@@ -199,13 +199,13 @@
         android:name="com.example.project_myfit.dialog.TreeViewDialog"
         android:label="TreeViewDialog">
         <argument
-            android:name="parent_category"
+            android:name="parentCategory"
             app:argType="string" />
         <argument
-            android:name="this_category_id"
+            android:name="thisCategoryId"
             app:argType="long" />
         <argument
-            android:name="this_folder_id"
+            android:name="thisFolderId"
             app:argType="long" />
         <action
             android:id="@+id/action_treeViewDialog_to_addDialog"
@@ -219,16 +219,16 @@
         android:name="com.example.project_myfit.dialog.SameNameEditDialog"
         android:label="SameNameEditDialog">
         <argument
-            android:name="item_type"
+            android:name="itemType"
             app:argType="string" />
         <argument
-            android:name="item_id"
+            android:name="itemId"
             app:argType="long" />
         <argument
-            android:name="new_name"
+            android:name="newName"
             app:argType="string" />
         <argument
-            android:name="is_parent_name"
+            android:name="isParentName"
             app:argType="boolean" />
     </dialog>
     <dialog
@@ -236,10 +236,10 @@
         android:name="com.example.project_myfit.dialog.ItemMoveDialog"
         android:label="ItemMoveDialog">
         <argument
-            android:name="selected_item_size"
+            android:name="selectedItemSize"
             app:argType="integer" />
         <argument
-            android:name="parent_id"
+            android:name="parentId"
             app:argType="long" />
     </dialog>
     <dialog
@@ -247,7 +247,7 @@
         android:name="com.example.project_myfit.dialog.DeleteConfirmDialog"
         android:label="DeleteConfirmDialog" >
         <argument
-            android:name="size_id"
+            android:name="sizeId"
             app:argType="long" />
     </dialog>
     <dialog
