--- a/app/src/main/res/menu/menu_recycle_bin_main.xml
+++ b/app/src/main/res/menu/menu_recycle_bin_main.xml
@@ -1,16 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_recycle_bin_search"
         android:icon="@drawable/icon_search"
         android:title="@string/menu_search"
-        app:showAsAction="always"
-        tools:ignore="AlwaysShowAction" />
-    <item
-        android:id="@+id/menu_recycle_bin_popup"
-        android:icon="@drawable/icon_popup_menu"
-        android:title="@string/menu_menu"
         app:showAsAction="always" />
 </menu>
