--- a/app/src/main/res/layout/item_folder_grid.xml
+++ b/app/src/main/res/layout/item_folder_grid.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView"
             android:layout_gravity="center_horizontal"
             android:layout_width="@dimen/_64sdp"
             android:layout_height="@dimen/_64sdp"
