--- a/app/src/main/res/layout/item_size_grid.xml
+++ b/app/src/main/res/layout/item_size_grid.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cardView"
             android:layout_width="@dimen/_140sdp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
