--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -76,7 +76,7 @@
             android:layout_gravity="bottom|center_horizontal"
             android:layout_marginBottom="@dimen/_20sdp"
             android:src="@drawable/icon_arrow_up"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:backgroundTint="@color/white"
             app:fabSize="mini"
             tools:ignore="ContentDescription" />
