--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -90,7 +90,7 @@
             android:id="@+id/action_listFragment_to_addDialog"
             app:destination="@id/addDialog" />
         <action
-            android:id="@+id/action_listFragment_to_trashActivity"
+            android:id="@+id/action_listFragment_to_RecycleBinActivity"
             app:destination="@id/recycleBinActivity" />
     </fragment>
     <fragment
@@ -261,7 +261,7 @@
     <activity
         android:id="@+id/recycleBinActivity"
         android:name="com.example.project_myfit.recyclebin.RecycleBinActivity"
-        android:label="activity_trash"
+        android:label="activityRecycleBin"
         tools:layout="@layout/activity_recycle_bin" />
     <!--    Dialog-->
 </navigation>
