--- a/app/src/main/res/navigation/nav_graph_search.xml
+++ b/app/src/main/res/navigation/nav_graph_search.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.example.project_myfit.search.main.SearchFragment"
+        android:name="com.example.project_myfit.search.SearchFragment"
         tools:layout="@layout/fragment_search"
         android:label="SearchFragment">
         <action
