--- a/app/src/main/res/layout/fragment_recycle_bin_search.xml
+++ b/app/src/main/res/layout/fragment_recycle_bin_search.xml
@@ -31,7 +31,7 @@
                     app:tabTextAppearance="@style/myTextSize10sdp" />
 
                 <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vp_recycle_bin_search"
+                    android:id="@+id/vp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     app:layout_constraintBottom_toBottomOf="parent"
