--- a/app/src/main/res/navigation/nav_graph_recycle_bin.xml
+++ b/app/src/main/res/navigation/nav_graph_recycle_bin.xml
@@ -10,7 +10,7 @@
         android:name="com.example.project_myfit.recyclebin.main.RecycleBinMainFragment"
         tools:layout="@layout/fragment_recycle_bin_main">
         <action
-            android:id="@+id/action_recycleBinMain_to_recycleBinSearchFragment"
+            android:id="@+id/toRecycleBinSearchFragment"
             app:destination="@id/recycleBinSearch"
             app:enterAnim="@anim/fragment_slide_in_from_down"
             app:exitAnim="@anim/fragment_fade_exit"
@@ -22,33 +22,57 @@
         android:name="com.example.project_myfit.recyclebin.search.RecycleBinSearchFragment"
         tools:layout="@layout/fragment_recycle_bin_search">
         <action
-            android:id="@+id/action_recycleBinSearch_to_restoreDialog"
+            android:id="@+id/toRestoreDialog"
             app:destination="@id/restoreDialog" />
         <action
-            android:id="@+id/action_recycleBinSearch_to_deleteForeverDialog"
+            android:id="@+id/toDeleteForeverDialog"
             app:destination="@id/deleteForeverDialog" />
         <action
-            android:id="@+id/action_recycleBinSearch_to_recycleBinRecentSearchDeleteAllDialog"
-            app:destination="@id/recycleBinRecentSearchDeleteAllDialog" />
+            android:id="@+id/toDeleteAllRecentSearchDialog"
+            app:destination="@id/deleteAllRecentSearchDialog" />
     </fragment>
     <dialog
         android:id="@+id/restoreDialog"
-        android:name="com.example.project_myfit.dialog.recyclebindialog.RestoreDialog"
+        android:name="com.example.project_myfit.dialog.RestoreDialog"
         android:label="RestoreDialog">
         <argument
             android:name="selectedItemSize"
             app:argType="integer" />
+        <argument
+            android:name="navGraphId"
+            app:argType="integer" />
+        <action
+            android:id="@+id/toNoParentDialog"
+            app:destination="@id/noParentDialog" />
     </dialog>
     <dialog
         android:id="@+id/deleteForeverDialog"
-        android:name="com.example.project_myfit.dialog.recyclebindialog.DeleteForeverDialog"
+        android:name="com.example.project_myfit.dialog.DeleteForeverDialog"
         android:label="DeleteForeverDialog">
         <argument
             android:name="selectedItemSize"
             app:argType="integer" />
+        <argument
+            android:name="navGraphId"
+            app:argType="integer" />
     </dialog>
     <dialog
-        android:id="@+id/recycleBinRecentSearchDeleteAllDialog"
-        android:name="com.example.project_myfit.dialog.recyclebindialog.RecycleBinRecentSearchDeleteAllDialog"
-        android:label="RecycleBinRecentSearchDeleteAllDialog"/>
+        android:id="@+id/noParentDialog"
+        android:name="com.example.project_myfit.dialog.NoParentDialog"
+        android:label="NoParentDialog">
+        <argument
+            android:name="noParentNameList"
+            app:argType="string[]" />
+        <argument
+            android:name="navGraphId"
+            app:argType="integer" />
+    </dialog>
+    <dialog
+        android:id="@+id/deleteAllRecentSearchDialog"
+        android:name="com.example.project_myfit.dialog.DeleteAllRecentSearchDialog"
+        android:label="DeleteAllRecentSearchDialog">
+        <argument
+            android:name="navGraphId"
+            app:argType="integer" />
+    </dialog>
 </navigation>
